syntax = "proto3";

package SystemProto;

message ServerStateDto {
	bool isDevRoomAvailable = 1;
}