syntax = "proto3";

import "Dto/Item.proto";

package ItemProto;

message UseItemMegaphoneRequest {
	int32 masterId = 1;
	Dto.ItemDto item = 2;
	string message = 3;
	bool isWishper = 4;
}

message UseItemMegaphoneResponse {
	int32 code = 1;
}

message UseItemMegaphoneBroadcast {
	int32 senderId = 1;
	int32 senderChannel = 2;
	Dto.ItemDto item = 3;
	string message = 4;
	bool isWishper = 5;
}